created a transformer for the introduction element on the homepage and starting with creating my resume

--- a/client/src/CSS/Home.css
+++ b/client/src/CSS/Home.css
@@ -1,5 +1,34 @@
+@keyframes slideInFromLeft {
+    0% {
+        transform: translateX(-5%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
 .home-wrapper {
     background-color: white;
     padding: 3%;
     height: 1000px;
+
+
+
+}
+
+/* .home-wrapper:hover {
+   
+} */
+
+.welcome {
+    font-weight: bold;
+
+}
+
+.home-introduction {
+    background-color: tomato;
+    padding: 2%;
+    animation: 0.2s ease-in 0s 1 slideInFromLeft;
+
 }
