--- a/client/src/CSS/Resume.css
+++ b/client/src/CSS/Resume.css
@@ -1,5 +1,6 @@
 .resume-wrapper {
-    margin-top: 3%;
+    margin-top: 0%;
+
     background-color: white;
     grid-template-columns: 32% 67.9% 0.1%;
     grid-template-rows: 5% 90% 5%;
@@ -38,6 +39,7 @@
     grid-row-end: 3;
     grid-column-start: 2;
     grid-column-end: 3;
+    padding: 2%;
 }
 
 .resume-bottom {
@@ -56,4 +58,71 @@
     grid-column-start: 3;
     grid-column-end: 4;
 
+}
+
+.resume-name {
+
+    font-size: 2em;
+    text-align: center;
+    color: green;
+    font-weight: bold;
+}
+
+.resume-profession {
+    font-size: 1.5em;
+    text-align: center;
+    color: green;
+}
+
+.resume-daanfoto-wrapper {
+    display: flex;
+    margin-top: 3%;
+}
+
+.resume-daanfoto {
+    width: 30%;
+    border-radius: 100%;
+
+
+}
+
+
+
+.resume-introduction {
+    margin-left: 2%;
+    margin-top: 2%;
+    color: navy;
+}
+
+.resume-career-summary-heading {
+    font-size: 1.5em;
+    color: green;
+    font-weight: bold;
+    text-decoration: underline;
+    text-align: center;
+    margin-left: 2%;
+}
+
+.resume-jobinfo-wrapper {
+    display: flex;
+
+}
+
+.resume-jobdate {
+    width: 32%;
+    color: navy;
+
+}
+
+.resume-jobinfo {
+    width: 70%;
+    color: navy;
+
+}
+
+.resume-coding-projects {
+    text-align: center;
+    color: navy;
+    font-weight: bold;
+    font-size: 1.4em;
 }
