--- a/client/src/CSS/Resume.css
+++ b/client/src/CSS/Resume.css
@@ -1,13 +1,33 @@
-.resume-wrapper {
+.resume-wrapper-large {
 
 
     background-color: white;
     grid-template-columns: 32% 67.9% 0.1%;
 
-    grid-template-rows: 5% 90% 5%;
+    grid-template-rows: 2% 96% 2%;
 
-    width: 100%;
-    height: 1800px;
+
+    height: 3800px;
+    font-size: 120%;
+
+
+
+
+    display: grid;
+
+}
+
+.resume-wrapper-small {
+
+
+    background-color: white;
+    grid-template-columns: 32% 67.9% 0.1%;
+
+    grid-template-rows: 2% 96% 2%;
+
+
+    height: 2500px;
+    font-size: 120%;
 
 
 
@@ -42,6 +62,7 @@
     grid-column-start: 2;
     grid-column-end: 3;
     padding: 2%;
+
 
 }
 
@@ -114,10 +135,14 @@
 }
 
 .resume-bold {
-    width: 32%;
+
     font-weight: bold;
 
 
+}
+
+.resume-margin {
+    width: 32%;
 }
 
 .resume-italic {
@@ -139,11 +164,26 @@
 
 
 .resume-project-links {
-    color: pink;
+    color: coral;
 }
 
 .resume-career-summary-wrapper {
     color: navy;
 
 
+}
+
+.resume-green-header {
+    color: green;
+    font-size: 125%;
+    text-align: center;
+    font-weight: bold;
+
+}
+
+.resume-more-past-experience {
+    text-align: center;
+    font-size: 125%;
+    color: red;
+    font-weight: bold;
 }
