--- a/client/src/CSS/Resume.css
+++ b/client/src/CSS/Resume.css
@@ -7,7 +7,7 @@
     grid-template-rows: 2% 96% 2%;
 
 
-    height: 3800px;
+    height: 4200px;
     font-size: 120%;
 
 
@@ -26,7 +26,7 @@
     grid-template-rows: 2% 96% 2%;
 
 
-    height: 2500px;
+    height: 3600px;
     font-size: 120%;
 
 
@@ -188,13 +188,9 @@
     font-weight: bold;
 }
 
-.resume-master-journalism:hover {
-    background-color: khaki;
-
-}
-
 .resume-master-economics-more-info,
-.resume-master-journalism-more-info {
+.resume-master-journalism-more-info,
+.resume-bachelor-journalism-more-info {
     display: flex;
     background-color: red;
     width: 100%;
@@ -203,8 +199,9 @@
 }
 
 .resume-master-economics-more-info img,
-.resume-master-journalism-more-info img {
-    width: 50%;
+.resume-master-journalism-more-info img,
+.resume-bachelor-journalism-more-info img {
+    width: 100%;
 
     /* border-radius: 10%; */
 }
@@ -222,4 +219,77 @@
 .resume-master-journalism-thesis a {
     color: white;
     font-weight: bold;
+}
+
+.resume-book-wrapper {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: 20% 20% 60%;
+
+}
+
+.resume-book-front {
+    grid-column-start: 1;
+    grid-column-end: 2;
+
+}
+
+.resume-book-front img {
+    width: 100%;
+}
+
+
+/* .resume-book-presentation {
+    grid-column-start: 1;
+    grid-column-end: 2;
+
+} */
+
+.resume-flip-box {
+    background-color: transparent;
+    width: 300px;
+    height: 100%;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+    /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.resume-flip-box-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.resume-flip-box:hover .resume-flip-box-inner {
+    transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.resume-flip-box-front,
+.resume-flip-box-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    /* Safari */
+    backface-visibility: hidden;
+}
+
+/* Style the front side */
+.resume-flip-box-front {
+    background-color: #bbb;
+    color: black;
+}
+
+/* Style the back side */
+.resume-flip-box-back {
+    background-color: dodgerblue;
+    color: white;
+    transform: rotateY(180deg);
 }
