--- a/client/src/CSS/Resume.css
+++ b/client/src/CSS/Resume.css
@@ -190,7 +190,7 @@
 
 .resume-master-economics-more-info,
 .resume-master-journalism-more-info,
-.resume-bachelor-journalism-more-info {
+.resume-bachelor-economics-more-info {
     display: flex;
     background-color: red;
     width: 100%;
@@ -200,14 +200,15 @@
 
 .resume-master-economics-more-info img,
 .resume-master-journalism-more-info img,
-.resume-bachelor-journalism-more-info img {
-    width: 100%;
+.resume-bachelor-economics-more-info img {
+    width: 35%;
 
     /* border-radius: 10%; */
 }
 
 .resume-master-economics-thesis,
-.resume-master-journalism-thesis {
+.resume-master-journalism-thesis,
+.resume-bachelor-economics-thesis {
     background-color: darkred;
     color: white;
     width: 100%;
@@ -216,7 +217,8 @@
 }
 
 .resume-master-economics-thesis a,
-.resume-master-journalism-thesis a {
+.resume-master-journalism-thesis a,
+.resume-bachelor-economics-thesis a {
     color: white;
     font-weight: bold;
 }
@@ -229,33 +231,45 @@
 
 }
 
-.resume-book-front {
+
+
+
+
+
+
+/* .resume-flip-box {
+    height: 100%;
+    width: 30%;
+    padding: 2%;
     grid-column-start: 1;
     grid-column-end: 2;
 
+
 }
+ */
 
 .resume-book-front img {
     width: 100%;
+    height: 100%;
+
+    border-style: solid;
+    border-width: 1px;
+    border-color: blue;
 }
 
 
-/* .resume-book-presentation {
-    grid-column-start: 1;
-    grid-column-end: 2;
 
-} */
 
 .resume-flip-box {
     background-color: transparent;
-    width: 300px;
-    height: 100%;
+    width: 100%;
+    height: 450px;
     border: 1px solid #f1f1f1;
     perspective: 1000px;
-    /* Remove this if you don't want the 3D effect */
+    grid-column-start: 1;
+    grid-column-end: 3;
 }
 
-/* This container is needed to position the front and back side */
 .resume-flip-box-inner {
     position: relative;
     width: 100%;
@@ -265,31 +279,104 @@
     transform-style: preserve-3d;
 }
 
-/* Do an horizontal flip when you move the mouse over the flip box container */
 .resume-flip-box:hover .resume-flip-box-inner {
     transform: rotateY(180deg);
 }
 
-/* Position the front and back side */
 .resume-flip-box-front,
+.resume-flip-box-back {
+    position: absolute;
+    padding: 2%;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    text-align: left;
+}
+
+
+
+.resume-flip-box-front {
+
+    color: black;
+}
+
+.resume-flip-box-back {
+
+    color: white;
+    transform: rotateY(180deg);
+}
+
+
+/* .resume-book-front {
+    grid-column-start: 1;
+    grid-column-end: 2;
+
+} */
+
+
+/* .resume-book-front img {
+    width: 100%;
+
+} */
+
+
+/* .resume-book-presentation {
+    grid-column-start: 2;
+    grid-column-end: 2;
+
+
+} */
+
+
+
+/* .resume-flip-box {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px; */
+/* Remove this if you don't want the 3D effect */
+/* } */
+
+/* This container is needed to position the front and back side */
+/* .resume-flip-box-inner {
+
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+
+} */
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+/* .resume-flip-box:hover .resume-flip-box-inner {
+    transform: rotateY(180deg);
+} */
+
+/* Position the front and back side */
+/* .resume-flip-box-front,
 .resume-flip-box-back {
     position: absolute;
     width: 100%;
     height: 100%;
-    -webkit-backface-visibility: hidden;
-    /* Safari */
-    backface-visibility: hidden;
-}
+    -webkit-backface-visibility: hidden; */
+/* Safari */
+/* backface-visibility: hidden;
+
+} */
 
 /* Style the front side */
-.resume-flip-box-front {
+/* .resume-flip-box-front {
     background-color: #bbb;
     color: black;
-}
+} */
 
 /* Style the back side */
-.resume-flip-box-back {
+/* .resume-flip-box-back {
     background-color: dodgerblue;
     color: white;
     transform: rotateY(180deg);
-}
+} */
