finishing my book part

--- a/client/src/CSS/Resume.css
+++ b/client/src/CSS/Resume.css
@@ -232,22 +232,6 @@
 }
 
 
-
-
-
-
-
-/* .resume-flip-box {
-    height: 100%;
-    width: 30%;
-    padding: 2%;
-    grid-column-start: 1;
-    grid-column-end: 2;
-
-
-}
- */
-
 .resume-book-front img {
     width: 100%;
     height: 100%;
@@ -307,76 +291,11 @@
     transform: rotateY(180deg);
 }
 
+.resume-book-more-info {
 
-/* .resume-book-front {
-    grid-column-start: 1;
-    grid-column-end: 2;
-
-} */
-
-
-/* .resume-book-front img {
-    width: 100%;
-
-} */
-
-
-/* .resume-book-presentation {
-    grid-column-start: 2;
-    grid-column-end: 2;
-
-
-} */
-
-
-
-/* .resume-flip-box {
-    background-color: transparent;
-    width: 300px;
-    height: 200px;
-    border: 1px solid #f1f1f1;
-    perspective: 1000px; */
-/* Remove this if you don't want the 3D effect */
-/* } */
-
-/* This container is needed to position the front and back side */
-/* .resume-flip-box-inner {
-
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-
-} */
-
-/* Do an horizontal flip when you move the mouse over the flip box container */
-/* .resume-flip-box:hover .resume-flip-box-inner {
-    transform: rotateY(180deg);
-} */
-
-/* Position the front and back side */
-/* .resume-flip-box-front,
-.resume-flip-box-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden; */
-/* Safari */
-/* backface-visibility: hidden;
-
-} */
-
-/* Style the front side */
-/* .resume-flip-box-front {
-    background-color: #bbb;
-    color: black;
-} */
-
-/* Style the back side */
-/* .resume-flip-box-back {
-    background-color: dodgerblue;
-    color: white;
-    transform: rotateY(180deg);
-} */
+    grid-column-start: 3;
+    grid-column-end: 4;
+    color: maroon;
+    margin-left: 3%;
+    margin-top: 1%;
+}
