--- a/client/src/CSS/Resume.css
+++ b/client/src/CSS/Resume.css
@@ -62,7 +62,29 @@
     grid-row-end: 2;
     grid-column-start: 1;
     grid-column-end: 3;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 5%;
+    align-items: center;
 
+}
+
+.resume-top div {
+    margin-left: 2%;
+}
+
+.resume-english,
+.resume-dutch {
+    background-color: red;
+    border-radius: 5%;
+
+    font-weight: bold;
+}
+
+.resume-english a,
+.resume-dutch a {
+    color: white;
+    text-decoration: none;
 
 }
 
