--- a/client/src/CSS/Resume.css
+++ b/client/src/CSS/Resume.css
@@ -45,7 +45,7 @@
 
 
 
-    min-height: 4000px;
+    min-height: 4200px;
     font-size: 120%;
 
 
@@ -93,6 +93,7 @@
     color: white;
 
     padding-left: 5%;
+    padding-right: 2%;
 
     grid-row-start: 2;
     grid-row-end: 3;
