--- a/client/src/CSS/App.css
+++ b/client/src/CSS/App.css
@@ -5,7 +5,7 @@ body {
 
 
 .App {
-  grid-template-rows: 1.5% 98.5%;
+  grid-template-rows: 70px 98.5%;
   grid-template-columns: 10% 80% 10%;
   display: grid;
   height: 100%;
