tennisNL page is done

--- a/client/src/CSS/About.css
+++ b/client/src/CSS/About.css
@@ -1,4 +1,10 @@
 .about-wrapper {
     height: auto;
     background-color: white;
+
+}
+
+.about-information {
+    font-size: 125%;
+    padding: 1%;
 }
