--- a/client/src/CSS/App.css
+++ b/client/src/CSS/App.css
@@ -21,6 +21,11 @@ nav {
   grid-row-start: 1;
   grid-row-end: 2;
   background-color: black;
+  position: fixed;
+  top: 0;
+  left: 10%;
+  right: 10%;
+  z-index: 1;
 
 
 }
