--- a/client/src/CSS/LocalArticles.css
+++ b/client/src/CSS/LocalArticles.css
@@ -59,10 +59,10 @@
 
 }
 
-img {
+.localArticles-flexer img {
     width: 100%;
     height: 100%;
-    max-width: 600px;
+    max-width: 590px;
     height: auto;
     padding: 1%;
 
