--- a/client/src/CSS/TennisNL.css
+++ b/client/src/CSS/TennisNL.css
@@ -9,6 +9,7 @@
     background-color: white;
     margin-bottom: 2%;
     padding: 1%;
+    overflow: auto;
 
 
 }
@@ -37,6 +38,8 @@
 
 .tennisNL-Daan-picture img {
     border-radius: 10%;
+    width: 100%;
+
 }
 
 .tennisNL-articles-flexer {
@@ -101,7 +104,7 @@
 
 }
 
-img {
+.tennisNL-articles-flexer img {
     width: 100%;
     height: 100%;
     max-width: 550px;
