--- a/client/src/CSS/Ajax.css
+++ b/client/src/CSS/Ajax.css
@@ -2,19 +2,19 @@
      display: grid;
      grid-template-rows: 8% 55% 27% 10%;
      grid-template-columns: 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5%;
+
  }
 
 
  .Ajax-information {
-     margin-top: 2%;
-     margin-left: 2%;
-     margin-right: 2%;
-     margin-bottom: 1%;
-     font-size: 150%;
+
+     font-size: 125%;
      grid-column-start: 1;
      grid-column-end: 21;
      grid-row-start: 1;
      grid-row-end: 2;
+     background-color: white;
+     padding: 2%;
  }
 
  .Ajax-ArenA img {
@@ -27,8 +27,7 @@
      grid-column-end: 21;
      grid-row-start: 2;
      grid-row-end: 4;
-     margin-left: 2%;
-     margin-right: 2%;
+
 
  }
 
@@ -60,15 +59,6 @@
 
 
  }
-
- /* .Ajax-opacity {
-     background-color: red;
-     opacity: 0.4;
-     grid-column-start: 1;
-     grid-column-end: 21;
-     grid-row-start: 3;
-     grid-row-end: 4;
- } */
 
  .Ajax-articles a {
      color: white;
