--- a/client/src/CSS/LocalArticles.css
+++ b/client/src/CSS/LocalArticles.css
@@ -1,9 +1,15 @@
+.localArticles-wrapper {
+    width: 100%;
+}
+
 .localArticles-flexer {
     display: flex;
 
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
+    width: 100%;
+    background-color: white;
 
 
 }
@@ -11,7 +17,7 @@
 .localArticles-searchbar {
     background-color: maroon;
     height: 50px;
-    width: 76%;
+    width: 100%;
     text-align: center;
     margin: 0 auto;
 
@@ -31,6 +37,7 @@
     border-width: 2px;
     border-style: solid;
     border-color: pink;
+    background-color: white;
 }
 
 .localArticles-header {
@@ -62,7 +69,7 @@
 .localArticles-flexer img {
     width: 100%;
     height: 100%;
-    max-width: 590px;
+    max-width: 650px;
     height: auto;
     padding: 1%;
 
