--- a/client/src/CSS/TennisNL.css
+++ b/client/src/CSS/TennisNL.css
@@ -15,14 +15,14 @@
 
 }
 
-.tennisNL-Daan-picture {
+/* .tennisNL-Daan-picture {
     width: 18%;
 
     float: left;
     position: relative;
     margin-right: 2%;
 
-}
+}*/
 
 
 
