--- a/client/src/CSS/Home.css
+++ b/client/src/CSS/Home.css
@@ -10,16 +10,12 @@
 
 .home-wrapper {
     background-color: white;
-
     min-height: 5000px;
-
-
-
 }
 
-/* .home-wrapper:hover {
-   
-} */
+.home-introduction img {
+    width: 10%;
+}
 
 .welcome {
     font-weight: bold;
@@ -27,8 +23,9 @@
 }
 
 .home-introduction {
-    background-color: tomato;
+    background-color: teal;
     padding: 2%;
     animation: 0.5s ease-in 0s 1 slideInFromLeft;
+    font-size: 125%;
 
 }
