--- a/client/src/CSS/About.css
+++ b/client/src/CSS/About.css
@@ -1,20 +1,38 @@
 .about-wrapper {
     height: auto;
     background-color: white;
+    font-size: 125%;
 
 }
 
 .about-information {
-    font-size: 125%;
+
     padding: 1%;
+    background-color: teal;
+}
+
+.about-rodi-media {
+
+    padding: 1%;
+}
+
+.about-link {
+    background-color: teal;
+    padding: 1%;
+}
+
+.about-link a {
+    text-decoration: none;
+    color: black;
+    font-size: 125%;
 }
 
 .about-tennis-information {
     background-color: white;
-    margin-bottom: 2%;
+
     padding: 1%;
 
-    font-size: 100%;
+
 
 
 }
@@ -33,8 +51,132 @@
 .about-tennis-text {
 
     display: block;
-    font-size: 125%;
+}
+
+.about-soccer-flexer img {
+    width: 40%;
+}
 
 
 
+.about-soccer {
+    padding: 1%;
+}
+
+.about-soccer-flexer {
+    display: flex;
+    margin-bottom: 2%;
+}
+
+.about-soccer-picture {
+    width: 20%;
+}
+
+
+.about-book {
+    padding: 2%;
+    padding-top: 0%;
+}
+
+.about-book a {
+    text-decoration: none;
+}
+
+.about-book-wrapper {
+    padding: 1%;
+}
+
+
+.about-book-flexer {
+    display: flex;
+
+
+
+}
+
+.about-book-cover-and-bookpresentation {
+    width: 150%;
+
+    padding: 5%;
+    padding-top: 0%;
+    padding-left: 1%;
+}
+
+.about-book-front img {
+    width: 100%;
+    height: 100%;
+
+    border-style: solid;
+    border-width: 1px;
+    border-color: blue;
+}
+
+
+
+
+.about-book-flip-box {
+    background-color: transparent;
+    width: 100%;
+    height: 450px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+    /* grid-column-start: 1;
+    grid-column-end: 3; */
+}
+
+
+
+.about-book-flip-box-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+.about-book-flip-box:hover .about-book-flip-box-inner {
+    transform: rotateY(180deg);
+}
+
+.about-book-flip-box-front,
+.about-book-flip-box-back {
+    position: absolute;
+    padding: 2%;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    text-align: left;
+}
+
+
+
+.about-book-flip-box-front {
+
+    color: black;
+}
+
+.about-book-flip-box-back {
+
+    color: white;
+    transform: rotateY(180deg);
+}
+
+.about-book-more-info {
+
+    /* grid-column-start: 3;
+    grid-column-end: 4; */
+    color: maroon;
+    padding: 5%;
+    margin-left: 3%;
+    margin-top: 2%;
+    background-color: #FFD9B2;
+    border-radius: 10%;
+    font-size: 90%;
+
+}
+
+.about-book-more-info a {
+    text-decoration: none;
 }
