--- a/client/src/CSS/App.css
+++ b/client/src/CSS/App.css
@@ -3,41 +3,84 @@ body {
   background-color: lightblue;
 }
 
+@media only screen and (min-width: 420px) {
+  .App {
+    grid-template-rows: 80px 97.5%;
+    grid-template-columns: 10% 80% 10%;
+    display: grid;
+    height: 100%;
+    width: 100%;
+  }
 
-.App {
-  grid-template-rows: 80px 97.5%;
-  grid-template-columns: 10% 80% 10%;
-  display: grid;
-  height: 100%;
-  width: 100%;
+
+
+  nav {
+    grid-column-start: 2;
+    grid-column-end: 3;
+
+    grid-row-start: 1;
+    grid-row-end: 2;
+    background-color: black;
+    position: fixed;
+    top: 0;
+    left: 10%;
+    right: 10%;
+    z-index: 1;
+
+
+  }
+
+
+  .main {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    height: 100%;
+    width: 100%;
+
+
+
+  }
 }
 
+@media only screen and (max-width: 420px) {
 
 
-nav {
-  grid-column-start: 2;
-  grid-column-end: 3;
+  nav {
 
-  grid-row-start: 1;
-  grid-row-end: 2;
-  background-color: black;
-  position: fixed;
-  top: 0;
-  left: 10%;
-  right: 10%;
-  z-index: 1;
+    grid-column-start: 2;
+    grid-column-end: 3;
 
-
-}
-
-.main {
-  grid-row-start: 2;
-  grid-row-end: 3;
-  grid-column-start: 2;
-  grid-column-end: 3;
-  height: 100%;
-  width: 100%;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    background-color: black;
+    position: fixed;
+    top: 0;
+    left: 0%;
+    right: 0%;
+    z-index: 1;
 
 
+  }
 
+  .App {
+    grid-template-rows: 62px 97.5%;
+
+    display: grid;
+    height: 100%;
+    width: 100%;
+  }
+
+  .main {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    height: 100%;
+    width: 100%;
+
+
+
+  }
 }
