--- a/client/src/CSS/Home.css
+++ b/client/src/CSS/Home.css
@@ -1,151 +1,97 @@
-@keyframes slideInFromLeft {
-    0% {
-        transform: translateX(-15%);
+@media only screen and (min-width: 420px) {
+
+    @keyframes slideInFromLeft {
+        0% {
+            transform: translateX(-15%);
+        }
+
+        100% {
+            transform: translateX(0);
+        }
     }
 
-    100% {
-        transform: translateX(0);
+    .home-wrapper {
+        background-color: white;
+        height: auto;
     }
-}
 
-.home-wrapper {
-    background-color: white;
-    height: auto;
-}
+    .home-introduction img {
+        width: 13%;
+        height: 15%;
+        padding-right: 2%;
+    }
 
-.home-introduction img {
-    width: 13%;
-    height: 15%;
-    padding-right: 2%;
-}
-
-.welcome {
-    font-weight: bold;
-    text-align: center;
-    font-size: 125%;
+    .welcome {
+        font-weight: bold;
+        text-align: center;
+        font-size: 125%;
 
 
-}
+    }
 
-.home-introduction {
+    .home-introduction {
 
-    background-color: teal;
-    padding: 2%;
-    animation: 0.5s ease-in 0s 1 slideInFromLeft;
-    font-size: 125%;
-    color: black;
+        background-color: teal;
+        padding: 2%;
+        animation: 0.5s ease-in 0s 1 slideInFromLeft;
+        font-size: 125%;
+        color: black;
 
-}
+    }
 
-.home-introduction-content {
-    display: flex;
-    justify-content: center;
-    padding: 2%;
-}
-
-.home-contact {
-    background-color: black;
-    color: white;
-    display: flex;
-    justify-content: flex-end;
-
-    width: 100%;
+    .home-introduction-content {
+        display: flex;
+        justify-content: center;
+        padding: 2%;
+    }
 
 }
 
-.home-contact-form-wrapper {
-    width: 100%;
-    padding: 2%;
-}
+@media only screen and (max-width: 420px) {
+    @keyframes slideInFromLeft {
+        0% {
+            transform: translateX(-25%);
+        }
 
-form {
-    display: flex;
-    flex-direction: column;
+        100% {
+            transform: translateX(0);
+        }
+    }
 
-}
+    .home-wrapper {
+        background-color: white;
+        height: auto;
+        max-width: 420px;
+    }
 
-form input {
-    width: 50%;
-}
+    .home-introduction img {
+        width: 13%;
+        height: 15%;
+        padding-right: 2%;
+        display: none;
+    }
 
-form textarea {
-    width: 50%;
-    height: 100px;
+    .welcome {
+        font-weight: bold;
+        /* text-align: center; */
+        font-size: 100%;
+        margin-left: 5%;
+    }
 
-}
+    .home-introduction {
 
-.home-submit-button {
-    width: 10%;
-}
+        background-color: teal;
+        padding: 2%;
+        animation: 0.5s ease-in 0s 1 slideInFromLeft;
+        font-size: 100%;
+        color: black;
 
+    }
 
-.home-contact-direct-wrapper {
-    padding: 2%;
-    background-color: white;
-    border-style: solid;
-    border-width: 4px;
-    border-color: black;
-    width: 60%;
-
-}
-
-
-.home-contact-form-header {
-    padding-bottom: 2%;
-    font-size: 160%;
-}
-
-.home-contact-direct-header {
-    padding-bottom: 2%;
-    font-size: 160%;
-    color: black;
-}
-
-.home-contact-direct-phone {
-    display: flex;
-    justify-content: flex-start;
-    color: black;
-
-}
-
-.home-contact-direct-phone-width {
-    width: 10%;
-
-}
-
-.home-contact-direct-phone-text {
-    font-size: 125%;
-    padding: 2%;
-
-}
-
-
-.home-contact-direct-phone img {
-    width: 100%;
-}
-
-
-.home-contact-direct-email {
-    display: flex;
-    justify-content: flex-start;
-    color: black;
-}
-
-.home-contact-direct-email-width {
-    width: 10%;
-
-}
-
-.home-contact-direct-email img {
-    width: 100%;
-}
-
-.home-contact-direct-email div {
-    width: 10%;
-}
-
-.home-contact-direct-email-text {
-    font-size: 125%;
-    padding: 2%;
+    .home-introduction-content {
+        display: flex;
+        justify-content: center;
+        padding: 2%;
+    }
 
 }
