--- a/client/src/CSS/Navbar.css
+++ b/client/src/CSS/Navbar.css
@@ -1,142 +1,302 @@
-.wrapper {
-    display: grid;
-    grid-template-columns: 85% 15%;
+@media only screen and (min-width: 420px) {
+    .wrapper {
+        display: grid;
+        grid-template-columns: 85% 15%;
+
+    }
+
+    .navbar-position {
+        grid-column-start: 1;
+        grid-column-end: 2;
+    }
+
+    .language-switch {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        color: red;
+        text-decoration: none;
+
+    }
+
+    .language-switch li {
+        list-style-type: none;
+        color: white;
+        font-size: 125%;
+    }
+
+    .language-switch li:hover {
+        color: blue;
+
+    }
+
+    .language-switch img {
+        width: 15%;
+        margin-right: 1%;
+    }
+
+    .navbar li {
+        list-style-type: none;
+        padding-right: 5%;
+
+    }
+
+
+
+
+    .navbar ul {
+        display: flex;
+        justify-content: flex-start;
+
+        background-color: black;
+
+        color: white;
+    }
+
+
+    .navbar a {
+        font-size: 175%;
+        color: red;
+
+        text-decoration: none;
+    }
+
+    .navbar a:hover {
+        color: white;
+    }
+
+    .dropdown a {
+        font-size: 100%;
+        color: black;
+    }
+
+    .dropdown {
+        background-color: black;
+    }
+
+    .dropdown-content {
+        display: flex;
+        margin-top: 16px;
+        position: absolute;
+        background-color: white;
+        font-size: 120%;
+        width: 40%;
+        padding-top: 2%;
+        padding-left: 2%;
+
+        height: auto;
+        color: black;
+        justify-content: left;
+        flex-wrap: wrap;
+        border-style: solid;
+        border-width: 2px;
+        border-color: red;
+    }
+
+
+
+    .dropdown-content a:hover {
+        color: red;
+    }
+
+    .fa {
+        color: white;
+    }
+
+    .about-grid {
+        grid-template-columns: 80% 20%;
+        display: grid;
+    }
+
+    .about-position {
+        grid-column-start: 1;
+        grid-column-end: 2;
+    }
+
+    .arrow-position {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        color: red;
+        margin-top: 20%;
+    }
+
+    .local-articles-header,
+    .sport-articles-header {
+        color: chocolate;
+    }
+
+    .local-articles-header:hover,
+    .sport-articles-header:hover {
+        background-color: navajowhite;
+    }
+
+    .sport-articles-wrapper,
+    .local-articles-wrapper {
+        margin-left: 5%;
+    }
+
+    .sport-articles-wrapper {
+        margin-top: 0%;
+    }
+
+    .sport-articles-header div {
+        color: black;
+        text-decoration: solid;
+    }
 }
 
-.navbar-position {
-    grid-column-start: 1;
-    grid-column-end: 2;
-}
+@media only screen and (max-width: 420px) {
 
-.language-switch {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    color: red;
-    text-decoration: none;
+    .wrapper {
 
-}
+        display: grid;
+        grid-template-columns: 85% 15%;
+        max-width: 360px;
+    }
 
-.language-switch li {
-    list-style-type: none;
-    color: white;
-    font-size: 125%;
-}
+    .wrapper ul {
+        padding-left: 10%;
+    }
 
-.language-switch li:hover {
-    color: blue;
+    .navbar-position {
+        grid-column-start: 1;
+        grid-column-end: 2;
+    }
 
-}
-
-.language-switch img {
-    width: 15%;
-    margin-right: 1%;
-}
-
-.navbar li {
-    list-style-type: none;
-    padding-right: 5%;
-
-}
+    .language-switch {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        color: red;
+        text-decoration: none;
 
 
+    }
+
+    .language-switch li {
+        list-style-type: none;
+        color: white;
+        font-size: 40%;
+    }
+
+    .language-switch li:hover {
+        color: blue;
+
+    }
+
+    .language-switch img {
+        width: 40%;
+        margin-right: 1%;
+    }
+
+    .navbar li {
+        list-style-type: none;
+        padding-right: 1%;
+        padding-left: 1%
+    }
+
+    .contact {
+        margin-left: 6%;
+    }
+
+    .navbar ul {
+        display: flex;
+        justify-content: flex-start;
+
+        background-color: black;
+
+        color: white;
+    }
 
 
-.navbar ul {
-    display: flex;
-    justify-content: flex-start;
+    .navbar a {
+        font-size: 100%;
+        color: red;
 
-    background-color: black;
+        text-decoration: none;
+    }
 
-    color: white;
-}
+    .navbar a:hover {
+        color: white;
+    }
+
+    .dropdown a {
+        font-size: 100%;
+        color: black;
+    }
+
+    .dropdown {
+        background-color: black;
+    }
+
+    .dropdown-content {
+        display: flex;
+        margin-top: 16px;
+        position: absolute;
+        background-color: white;
+        font-size: 100%;
+        width: 75%;
+        padding-top: 2%;
 
 
-.navbar a {
-    font-size: 175%;
-    color: red;
-
-    text-decoration: none;
-}
-
-.navbar a:hover {
-    color: white;
-}
-
-.dropdown a {
-    font-size: 100%;
-    color: black;
-}
-
-.dropdown {
-    background-color: black;
-}
-
-.dropdown-content {
-    display: flex;
-    margin-top: 16px;
-    position: absolute;
-    background-color: white;
-    font-size: 120%;
-    width: 40%;
-    padding-top: 2%;
-    padding-left: 2%;
-
-    height: auto;
-    color: black;
-    justify-content: left;
-    flex-wrap: wrap;
-    border-style: solid;
-    border-width: 2px;
-    border-color: red;
-}
+        height: auto;
+        color: black;
+        justify-content: left;
+        flex-wrap: wrap;
+        border-style: solid;
+        border-width: 2px;
+        border-color: red;
+    }
 
 
 
-.dropdown-content a:hover {
-    color: red;
-}
+    .dropdown-content a:hover {
+        color: red;
+    }
 
-.fa {
-    color: white;
-}
+    .fa {
+        color: white;
+    }
 
-.about-grid {
-    grid-template-columns: 80% 20%;
-    display: grid;
-}
+    .about-grid {
+        grid-template-columns: 80% 20%;
+        display: grid;
+    }
 
-.about-position {
-    grid-column-start: 1;
-    grid-column-end: 2;
-}
+    .about-position {
+        grid-column-start: 1;
+        grid-column-end: 2;
+    }
 
-.arrow-position {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    color: red;
-    margin-top: 20%;
-}
+    .arrow-position {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        color: red;
 
-.local-articles-header,
-.sport-articles-header {
-    color: chocolate;
-}
+        margin-left: -80%;
+    }
 
-.local-articles-header:hover,
-.sport-articles-header:hover {
-    background-color: navajowhite;
-}
+    .local-articles-header,
+    .sport-articles-header {
+        color: chocolate;
+    }
 
-.sport-articles-wrapper,
-.local-articles-wrapper {
-    margin-left: 5%;
-}
+    .local-articles-header:hover,
+    .sport-articles-header:hover {
+        background-color: navajowhite;
+    }
 
-.sport-articles-wrapper {
-    margin-top: 0%;
-}
+    .sport-articles-wrapper,
+    .local-articles-wrapper {
+        margin-left: 5%;
 
-.sport-articles-header div {
-    color: black;
-    text-decoration: solid;
+    }
+
+    .sport-articles-wrapper {
+        margin-top: 3%;
+    }
+
+    .sport-articles-header div {
+        color: black;
+        text-decoration: solid;
+    }
+
 }
