--- a/client/src/CSS/Contact.css
+++ b/client/src/CSS/Contact.css
@@ -1,140 +1,292 @@
-.contact-introduction {
+@media only screen and (min-width: 421px) {
+    .contact-introduction {
 
-    background-color: white;
-    padding: 4%;
+        background-color: white;
+        padding: 4%;
 
-    font-size: 125%;
-    color: black;
+        font-size: 125%;
+        color: black;
 
+    }
+
+    .contact-wrapper {
+        background-color: white;
+        height: auto;
+        background-color: teal;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
+
+
+
+
+
+    .introduction-content {
+        display: flex;
+        justify-content: center;
+        padding: 2%;
+    }
+
+    .contact {
+        background-color: black;
+        color: white;
+        display: flex;
+        justify-content: flex-end;
+
+        width: 100%;
+
+    }
+
+    .contact-form-wrapper {
+        width: 100%;
+        padding: 2%;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    form input {
+        width: 50%;
+    }
+
+    form textarea {
+        width: 50%;
+        height: 100px;
+
+    }
+
+    .submit-button {
+        width: 10%;
+    }
+
+
+    .contact-direct-wrapper {
+        padding: 2%;
+        background-color: white;
+        border-style: solid;
+        border-width: 4px;
+        border-color: black;
+        width: 60%;
+
+    }
+
+
+    .contact-form-header {
+        padding-bottom: 2%;
+        font-size: 160%;
+    }
+
+    .contact-direct-header {
+        padding-bottom: 2%;
+        font-size: 160%;
+        color: black;
+    }
+
+    .contact-direct-phone {
+        display: flex;
+        justify-content: flex-start;
+        color: black;
+
+    }
+
+    .contact-direct-phone-width {
+        width: 10%;
+
+    }
+
+    .contact-direct-phone-text {
+        font-size: 125%;
+        padding: 2%;
+
+    }
+
+
+    .contact-direct-phone img {
+        width: 100%;
+    }
+
+
+    .contact-direct-email {
+        display: flex;
+        justify-content: flex-start;
+        color: black;
+    }
+
+    .contact-direct-email-width {
+        width: 10%;
+
+    }
+
+    .contact-direct-email img {
+        width: 100%;
+    }
+
+    .contact-direct-email div {
+        width: 10%;
+    }
+
+    .contact-direct-email-text {
+        font-size: 125%;
+        padding: 2%;
+
+    }
+
+    .contact-background-below {
+        background-color: white;
+        padding: 4%;
+
+    }
 }
 
-.contact-wrapper {
-    background-color: white;
-    height: auto;
-    background-color: teal;
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
+
+@media only screen and (max-width: 420px) {
+    .contact-introduction {
+
+        background-color: white;
+
+
+        font-size: 100%;
+        color: black;
+
+    }
+
+    .contact-wrapper {
+        background-color: white;
+        height: auto;
+        /* width: 100%; */
+
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
 
 
 
 
 
-.introduction-content {
-    display: flex;
-    justify-content: center;
-    padding: 2%;
-}
+    /* .introduction-content {
 
-.contact {
-    background-color: black;
-    color: white;
-    display: flex;
-    justify-content: flex-end;
+        padding: 2%;
+    } */
 
-    width: 100%;
+    .contact {
+        background-color: black;
+        color: white;
+        width: 100%;
 
-}
+        /* padding: 0px; */
 
-.contact-form-wrapper {
-    width: 100%;
-    padding: 2%;
-}
+        /* width: 100%; */
 
-form {
-    display: flex;
-    flex-direction: column;
-
-}
-
-form input {
-    width: 50%;
-}
-
-form textarea {
-    width: 50%;
-    height: 100px;
-
-}
-
-.submit-button {
-    width: 10%;
-}
+    }
 
 
-.contact-direct-wrapper {
-    padding: 2%;
-    background-color: white;
-    border-style: solid;
-    border-width: 4px;
-    border-color: black;
-    width: 60%;
+    .contact-form-wrapper {
+        width: 100%;
 
-}
+    }
 
+    /* form {
+        width: 100%;
+        padding: 0px !important;
+        display: flex;
+        flex-direction: column;
 
-.contact-form-header {
-    padding-bottom: 2%;
-    font-size: 160%;
-}
+    } */
 
-.contact-direct-header {
-    padding-bottom: 2%;
-    font-size: 160%;
-    color: black;
-}
+    /* form input {
+        width: 94%;
+    } */
 
-.contact-direct-phone {
-    display: flex;
-    justify-content: flex-start;
-    color: black;
+    form textarea {
+        /* width: 94%; */
+        height: 100px;
 
-}
+    }
 
-.contact-direct-phone-width {
-    width: 10%;
-
-}
-
-.contact-direct-phone-text {
-    font-size: 125%;
-    padding: 2%;
-
-}
+    /* .submit-button {
+        width: 94%;
+    } */
 
 
-.contact-direct-phone img {
-    width: 100%;
-}
+    .contact-direct-wrapper {
+        /* padding: 2%; */
+        background-color: white;
+        /* border-style: solid; */
+        /* border-width: 4px; */
+        /* border-color: black; */
+        /* width: 94%; */
+        margin-top: 10%;
+
+    }
 
 
-.contact-direct-email {
-    display: flex;
-    justify-content: flex-start;
-    color: black;
-}
+    .contact-form-header {
+        padding-top: 5%;
+        padding-bottom: 5%;
+        /* font-size: 125%; */
+        font-weight: bold;
+    }
 
-.contact-direct-email-width {
-    width: 10%;
+    .contact-direct-header {
+        padding-top: 5%;
+        padding-bottom: 5%;
+        /* font-size: 125%; */
+        font-weight: bold;
 
-}
+        color: black;
+    }
 
-.contact-direct-email img {
-    width: 100%;
-}
+    .contact-direct-phone {
+        display: flex;
+        justify-content: flex-start;
+        color: black;
 
-.contact-direct-email div {
-    width: 10%;
-}
+    }
 
-.contact-direct-email-text {
-    font-size: 125%;
-    padding: 2%;
+    .contact-direct-phone-width {
+        width: 10%;
 
-}
+    }
 
-.contact-background-below {
-    background-color: white;
-    padding: 4%;
+    .contact-direct-phone-text {
+        font-size: 100%;
+        /* padding: 2%; */
+
+    }
+
+
+    .contact-direct-phone img {
+        width: 100%;
+    }
+
+
+    .contact-direct-email {
+        display: flex;
+        justify-content: flex-start;
+        color: black;
+    }
+
+    .contact-direct-email-width {
+        width: 10%;
+
+    }
+
+    .contact-direct-email img {
+        width: 90%;
+    }
+
+    .contact-direct-email div {
+        width: 10%;
+    }
+
+    .contact-direct-email-text {
+        font-size: 100%;
+        /* padding: 2%; */
+
+    }
+
 
 }
